--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "class-validator": "^0.14.1",
     "mongoose": "^8.3.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1",
-    "uuid": "^9.0.1"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -43,7 +42,6 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
-    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
