--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.2.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
