--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.8",
+    "@nestjs/websockets": "^10.3.8",
     "@types/multer": "^1.4.11",
     "@types/streamifier": "^0.1.2",
     "bcrypt": "^5.1.1",
